feat(front): added done task and order by status

--- a/frontend/src/layouts/TaskPanel/TaskPanel.module.css
+++ b/frontend/src/layouts/TaskPanel/TaskPanel.module.css
@@ -1,5 +1,5 @@
 .asideTask{
-  background: var(--cerulean);
-  color: var(--white);
+  background: var(--white);
+  color: var(--cerulean);
   height: 100vh;
 }
