feat: added new style and shared modal componentn

--- a/frontend/src/layouts/TaskPanel/TaskPanel.module.css
+++ b/frontend/src/layouts/TaskPanel/TaskPanel.module.css
@@ -1,5 +1,5 @@
 .asideTask{
-  background: var(--white);
+  background: hsl(212.73deg 57.89% 96.27%);
   color: var(--cerulean);
   height: 100%;
 }
